# idps-firewalld

./: AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
ebpf/: Cargo.toml
ebpf/src/: egress.rs  identity.rs  ingress.rs  lib.rs  main.rs  maps.rs  packet.rs  rules.rs  stats.rs
migrations/: 0001_init.sql
scripts/: ebpf-smoke.sh
src/: app.rs  lib.rs  main.rs  signal.rs
src/config/: mod.rs
src/dataplane/: aya_backend.rs  backend.rs  compile.rs  events.rs  loader.rs  maps.rs  mod.rs  stats.rs  tasks.rs
src/event/: classify.rs  mod.rs  pipeline.rs
src/identity/: interface_map.rs  mod.rs  model.rs  procfs.rs  provider.rs  resolve.rs
src/idps/: client.rs  events.rs  mod.rs
src/ops/: health.rs  mod.rs  stats.rs
src/persistence/: db.rs  mod.rs  outbox.rs  schema.rs
src/reporter/: mod.rs
src/rule/: manager.rs  mod.rs  model.rs  normalize.rs
src/runtime/: mod.rs  state.rs  tasks.rs
src/traffic/: aggregate.rs  mod.rs  report.rs  window.rs
tests/: ebpf_compile.rs  ebpf_smoke.rs
