[package]
name = "idps-firewalld"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[features]
default = []
ebpf = ["dep:aya", "dep:bytemuck", "dep:nix"]

[dependencies]
idps-core = { path = "../idps-base/crates/idps-core" }
idps-protocol = { path = "../idps-base/crates/idps-protocol" }
idps-client = { path = "../idps-base/crates/idps-client", features = ["tcp", "uds"] }

anyhow = "~1.0"
async-trait = "~0.1"
futures = "~0.3"
aya = { version = "~0.13", features = ["async_tokio"], optional = true }
bytemuck = { version = "~1.19", features = ["derive"], optional = true }
nix = { version = "~0.29", features = ["net", "sched"], optional = true }
rusqlite = { version = "~0.32", features = ["bundled"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.48", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = "~0.7"
tracing = "~0.1"
tracing-subscriber = { version = "~0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "~3.15"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
